HDX-6209 - HDX Tools homepage redesign UI spec and icons          - implement new menu          - add hero section changes          - retweak featured section - weird background on the individual tools          - fix footer          - create blue line between tool categories + fix for optical illusion on tools image not centered

--- a/src/styles/base/overrides.less
+++ b/src/styles/base/overrides.less
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: @blueColor;
+  //background-color: @blueColor;
 }
 
 .contentBackground{
